# 01_hasura-django-starter

./: README.md
P1_fastapi-django/: package.json  pyproject.toml  serverless.yml
P1_fastapi-django/.github/: poetry.yml
P1_fastapi-django/.github/workflows/: deploy.yml
P1_fastapi-django/front/layouts/: default.vue
P1_fastapi-django/front/pages/: infline.vue  opensearch.vue  plant.vue
P1_fastapi-django/front_dist/_nuxt/: 5972f66.js  LICENSES  a34cc06.js  bbabd4f.js  db8ecce.js  de2b91a.js  ece14b2.js
P1_fastapi-django/mysite/: settings.py
P1_fastapi-django/polls/adapters/: __init__.py
P1_fastapi-django/polls/migrations/: 0002_chinko.py
P1_fastapi-django/polls/models/: __init__.py
P1_fastapi-django/polls/routers/: chinko.py
clients/front/: nuxt.config.js  package.json
clients/front/pages/: create.vue  index.vue
clients/front_dist/_nuxt/: 08491b8.js  2baa1b7.js  357d6ad.js  3e16fa6.js  4f3a11a.js  5718ce9.js  5e05c3d.js  a516b7b.js  e53b51c.js
clients/front_dist/infline/: index.html
clients/svelte/src/: App.svelte
clients/svelte/src/pages/: Home.svelte  Profile.svelte  UserCreate.svelte  UserExpanded.svelte  Users.svelte
clients/svelte/src/shared/: apollo.js
django/: Dockerfile  entrypoint.sh
django/api/: models.py  urls.py
django/app/: asgi.py  settings.py
django/mysite/: asgi.py
django/polls/: admin.py
django/polls/schemas/: __init__.py
