[tool.poetry]
name = "fastapi-django"
version = "0.1.0"
# doc
authors = ["Weiliang Li <to.be.impressive@gmail.com>"]
description = "fastapi and django integration"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

# 3rd party
django = "^4.1"
fastapi = "^0.81.0"
pydantic = "^1.10.1"
uvicorn = "^0.18.3"
uvloop = {version = "^0.16.0", markers = 'sys_platform != "win32"'}
whitenoise = "^6.2.0"
django-stubs = "^1.12.0"
mangum = "^0.15.1"

[tool.poetry.dev-dependencies]
black = "^22.6"
flake8 = "^5.0.4"
ipython = "^8.4.0"


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
multi_line_output = 3
profile = "black"
